<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".officers_dashboard">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/officers_icons"
        android:layout_width="108dp"
        android:layout_height="101dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="21dp"
        android:contentDescription="@string/icons"
        android:src="@drawable/round_account_circle_24"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="1dp"
        android:fontFamily="@font/inter"
        android:text="@string/lanre_ayotebi"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/name_subtext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/officers_icons"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/name_subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="66dp"
        android:fontFamily="@font/inter"
        android:text="@string/lieutenant"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="VisualLintOverlap" />

    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/call_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_subtext">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/whatsapp_image_2023_34" />
    </FrameLayout>

    <Button
        android:id="@+id/call_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:background="#645614"
        android:color="#645614"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="83dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout4" />

</androidx.constraintlayout.widget.ConstraintLayout>