<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Problem_response">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </FrameLayout>

    <TextView
        android:id="@+id/great"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/lora"
        android:text="@string/your_report_will_be_attended_to_shortly"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/reg_subtext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/reg_subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="150dp"
        android:fontFamily="@font/inter"
        android:text="@string/thank_you_for_trusting_us"
        android:textAlignment="center"
        android:textColor="#525252"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/great" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="161dp"
        android:layout_height="134dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="13dp"
        android:contentDescription="@string/sp_logo"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@+id/great"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="65dp"
        android:fontFamily="@font/inter"
        android:text="@string/exit"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/go_to_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_subtext"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/go_to_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="78dp"
        android:fontFamily="@font/inter"
        android:text="@string/go_back_to_home"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exit"
        tools:ignore="VisualLintOverlap" />

    <FrameLayout
        android:id="@+id/exit_layout"
        android:layout_width="266dp"
        android:layout_height="56dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="170dp"
        android:background="@drawable/border"
        android:clickable="true"
        android:contentDescription="@string/reportaproblem_frame"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_subtext"
        tools:ignore="DuplicateSpeakableTextCheck" />
<!--        tools:ignore="UsingOnClickInXml,DuplicateSpeakableTextCheck" />-->

    <FrameLayout
        android:id="@+id/go_to_home_layout"
        android:layout_width="266dp"
        android:layout_height="56dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/border"
        android:clickable="true"
        android:contentDescription="@string/reportaproblem_frame"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exit_layout"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>