<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F5F5F5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/officers_icons"
        android:layout_width="108dp"
        android:layout_height="101dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/icons"
        android:src="@drawable/round_account_circle_24"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/inter"
        android:text="@string/john_favour"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/name_subtext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/officers_icons"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/name_subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/inter"
        android:text="@string/commander_general"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/onbording_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="VisualLintOverlap" />

    <View
        android:id="@+id/onbording_divider"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="54dp"
        android:background="@color/black_overlay"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_subtext" />

    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="241dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_subtext">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/whatsapp8" />
    </FrameLayout>

    <Button
        android:id="@+id/see_problem"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="570dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="10dp"
        android:background="#645614"
        android:clickable="true"
        android:color="#645614"
        android:focusable="true"
        android:text="@string/see_reported_problem"
        app:layout_constraintBottom_toTopOf="@+id/check_officers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/check_officers"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="40dp"
        android:background="#645614"
        android:color="#645614"
        android:text="@string/check_officers_around_you"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/see_problem"
        tools:ignore="TextSizeCheck,VisualLintBounds" />

</androidx.constraintlayout.widget.ConstraintLayout>