<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboarding">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F5F5F5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </FrameLayout>


    <TextView
        android:id="@+id/officers"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="47dp"
        android:fontFamily="@font/lora"
        android:text="@string/officers_around_you"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/onbording_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck,VisualLintBounds" />

    <View
        android:id="@+id/onbording_divider"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="32dp"
        android:background="@color/black_overlay"
        app:layout_constraintBottom_toTopOf="@+id/officers_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/officers" />

    <ImageView
        android:id="@+id/officers_icons"
        android:layout_width="67dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="560dp"
        android:contentDescription="@string/icons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onbording_divider"
        android:src="@drawable/round_account_circle_24" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="1dp"
        android:fontFamily="@font/inter"
        android:text="@string/lanre_ayotebi"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/name_subtext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/officers_icons"
        app:layout_constraintTop_toBottomOf="@+id/onbording_divider"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/name_subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="581dp"
        android:fontFamily="@font/inter"
        android:text="@string/lieutenant"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/officers_icons"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="VisualLintOverlap" />

    <FrameLayout
        android:id="@+id/officers_link"
        android:layout_width="300dp"
        android:layout_height="72dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="600dp"
        android:clickable="true"
        android:contentDescription="@string/dummy_button"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onbording_divider"
        tools:ignore="RedundantDescriptionCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>